--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.9.0",
+    "@emotion/styled": "^11.8.1",
+    "@mui/material": "^5.8.3",
+    "@mui/styles": "^5.8.3",
     "@redux-saga/core": "^1.1.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -12,6 +16,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "connected-react-router": "^6.9.1",
+    "formik": "^2.2.9",
     "history": "^4.10.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
@@ -30,7 +35,8 @@
     "smoothscroll-polyfill": "^0.4.4",
     "typesafe-actions": "^5.1.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.11"
   },
   "scripts": {
     "start": "react-scripts start",
