--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^2.14.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
-    "@mui/material": "^5.8.3",
+    "@mui/icons-material": "^5.8.4",
+    "@mui/lab": "^5.0.0-alpha.86",
+    "@mui/material": "^5.8.4",
     "@mui/styles": "^5.8.3",
     "@redux-saga/core": "^1.1.3",
     "@testing-library/jest-dom": "^5.11.4",
@@ -16,6 +19,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "connected-react-router": "^6.9.1",
+    "date-fns": "^2.28.0",
     "formik": "^2.2.9",
     "history": "^4.10.1",
     "js-cookie": "^3.0.1",
